# EasyPlayer

./: readme.md
EasyPlayer_v1.0.0/app/src/main/: AndroidManifest.xml
EasyPlayer_v1.0.0/app/src/main/cpp/: BaseChannel.h  JavaCallHelper.cpp  VideoChannel.h
EasyPlayer_v1.0.0/app/src/main/java/com/zt/easyplayer/ffmpeg/: PlayerFunc.java
EasyPlayer_v1.0.0/app/src/main/res/drawable/: player_select_style.xml
EasyPlayer_v1.0.0/app/src/main/res/layout/: activity_player.xml
EasyPlayer_v1.0.0/app/src/main/res/values/: play_background.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  native_lib.cpp  safe_queue.h
app/src/main/cpp/ffmpeg/libavutil/: common.h
app/src/main/java/com/zt/easyplayer/activity/: MainActivity.java  PlayerActivity.java
app/src/main/res/layout/: activity_main.xml
